# codex-range-trading

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  bootstrap.py  main.py
app/components/: charts.py  metrics.py  tables.py
app/config/: logging.py  (+1 more)
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260319_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: constants.py  settings.py
backend/app/db/: session.py
backend/app/jobs/: __init__.py  run_scan.py
backend/app/models/: __init__.py  alert.py  indicator.py  mixins.py  ohlcv.py  range_score.py  range_snapshot.py  stock.py  trade_setup.py
backend/app/schemas/: __init__.py  common.py  range.py
backend/app/services/: alert_service.py  indicator_service.py  ingestion_service.py  local_seed_provider.py  provider.py  range_detection_service.py  scan_service.py  scoring_service.py  setup_service.py  stooq_provider.py  types.py  universe_service.py
backend/range_trading_screener_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_health.py  test_range_detection.py  test_scoring.py  test_stooq_provider.py
docs/: API_SPEC.md  APP_SPEC.md  ARCHITECTURE.md  DATA_ARCHITECTURE.md  DB_SCHEMA.md  DECISIONS.md  PRD.md  TASKS.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
scripts/: run_scan.py
tests/: test_indicator_service.py  test_providers.py  test_range_detection.py  test_scan_service.py  test_scoring_and_setup.py  test_stooq_providers.py
(+37 files in other folders)
