[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "range-trading-screener"
version = "0.1.0"
description = "Streamlit-first range trading screener for S&P 500 stocks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.43,<2.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "plotly>=5.24,<6.0",
  "SQLAlchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<0.12",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
